connect app to backend and local database